# FR5_moveit

./: .gitignore  clean_launch.sh
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/: libchomp_motion_planner.so.1.1.16  libchomp_planner_plugin.so.1.1.16  libcollision_detector_bullet_plugin.so.1.1.16  libcollision_detector_fcl_plugin.so.1.1.16  libgeometric_shapes.so.0.7.7  libmoveit_background_processing.so.1.1.16  libmoveit_cached_ik_kinematics_base.so.1.1.16  libmoveit_cached_ik_kinematics_plugin.so.1.1.16  libmoveit_chomp_optimizer_adapter.so.1.1.16  libmoveit_collision_detection.so.1.1.16  libmoveit_collision_detection_bullet.so.1.1.16  libmoveit_collision_detection_fcl.so.1.1.16  libmoveit_collision_distance_field.so.1.1.16  libmoveit_collision_plugin_loader.so.1.1.16  libmoveit_common_planning_interface_objects.so.1.1.16  libmoveit_constraint_sampler_manager_loader.so.1.1.16  libmoveit_constraint_samplers.so.1.1.16  libmoveit_cpp.so.1.1.16  libmoveit_default_planning_request_adapter_plugins.so.1.1.16  libmoveit_depth_image_octomap_updater.so.1.1.16  libmoveit_depth_image_octomap_updater_core.so.1.1.16  libmoveit_depth_self_filter.so.1.1.16  libmoveit_distance_field.so.1.1.16  libmoveit_dynamics_solver.so.1.1.16  (+69 more)
src/: .rosinstall.bak
src/fr5_data_collection/: CMakeLists.txt  package.xml
src/fr5_data_collection/data/: fr5_data_GroupA.csv
src/fr5_data_collection/scripts/: collect_data.py  collect_data_gemini.py  pid_autotune.py  pid_tuning_test.py
(+1429 files in other folders)
